# GNL_Scorer

./: Initial+normalized_data.xlsx  README.md  Supplementary Table 1.xlsx  test.py  this is a test.txt  xu2015TrainMEsc2.scores.txt
cal_deltaG/: deltaG_result.txt.dG  deltaG_result.txt.run  for_deltaG.txt
cal_deltaG/oligoarrayaux-3.8/: LICENSE  Makefile  Makefile.am  Makefile.in  README  VERSIONS  aclocal.m4  config.h  config.in  config.status  configure  configure.ac  machine.pl
cal_deltaG/oligoarrayaux-3.8/data/: Makefile  Makefile.am  Makefile.in
cal_deltaG/oligoarrayaux-3.8/data/rules/: tstacki23.dg  tstacki23.dgd  tstacki23.dh  tstacki23.dhd
cal_deltaG/oligoarrayaux-3.8/doc/: Makefile  Makefile.am  Makefile.in  ct-energy.1.in  ct2rnaml.1.in  h-num.pl.1  h-num.pl.1.in  hybrid-min.1.in  hybrid-ss-min.1  hybrid-ss-min.1.in  melt.pl.1  melt.pl.1.in  references  ss-count.pl.1  ss-count.pl.1.in
cal_deltaG/oligoarrayaux-3.8/scripts/: Makefile  Makefile.am  Makefile.in  h-num.pl  h-num.pl.in  melt.pl  melt.pl.in  ss-count.pl  ss-count.pl.in
cal_deltaG/oligoarrayaux-3.8/share/man/man1/: ct-energy.1  ct2rnaml.1  hybrid-min.1
cal_deltaG/oligoarrayaux-3.8/share/oligoarrayaux/: tstacki23.DG  tstacki23.DGD
cal_deltaG/oligoarrayaux-3.8/src/: Makefile  Makefile.am  Makefile.in  constraints.h  ct-energy  ct-energy.c  ct2rnaml  ct2rnaml.c  energy.c  energy.h  hybrid-min  hybrid-min.c  hybrid-ss-min  hybrid-ss-min.c  options.h  util.h  xmalloc.c  xmalloc.h
cal_deltaG/oligoarrayaux-3.8/src/.deps/: ct-energy.Po  ct2rnaml.Po  energy.Po  getopt.Po  getopt1.Po  hybrid_min-energy.Po  hybrid_min-hybrid-min.Po  hybrid_ss_min-energy.Po  hybrid_ss_min-hybrid-ss-min.Po  xmalloc.Po
example/: example_30mer.fasta  example_30mer.txt
featurization/: featurization.py
prediction/: prediction.py
